<resources>
    <string name="app_name">Company Profile</string>
    <string name="ubj_profile">Universitas Bhayangkara Jakarta Raya (Ubhara Jaya) sebagai salah satu Perguruan Tinggi Swasta yang berada dibawah pembinaan Yayasan Brata Bhakti sebagai badan penyelenggaranya, berkewajiban mewujudkan tujuan pendidikan nasional dengan Visi dan Misi nya bagi mendukung keberhasilan tugas Kepolisian Negara Republik Indonesia khususnya dan pengembangan kualitas hidup bermasyarakat berbangsa dan benegara pada umumnya.</string>
    <string name="ubj_visi">Visi Ubhara Jaya adalah terwujudnya Universitas Bhayangkara Jakarta Raya sebagai universitas unggulan di tingkat nasional yang berwawasan kebangsaan dan berbasis sekuriti guna menghasilkan sumber daya manusia yang mampu bersaing dan berperilaku baik.</string>
    <string name="ubj_misi_1">1. Menghasilkan lulusan yang berkualitas dalam peningkatan mutu sumber daya manusia.</string>
    <string name="ubj_misi_2">2. Melakukan proses pembelajaran sesuai dengan kurikulum perguruan tinggi yang adaptif terhadap perkembangan ilmu pengetahuan, teknologi dan seni.</string>
    <string name="ubj_misi_3">3. Melakukan penelitian dalam rangka pengembangan ilmu dan teknologi, baik pada bidang keilmuan dasar maupun aplikatif.</string>
    <string name="ubj_misi_4">4. Melakukan pengabdian kepada masyarakat melalui penerapan ilmu pengetahuan dna teknologi untuk meningkatkan kualitas hidup masyarakat.</string>
    <string name="ubj_misi_5">5. Berkontribusi aktif dan bekerja sama dalam kegiatan ilmiah khususnya yang menyangkut tugas kepolisian, mengenai masalah sosial dan penanganannya dalam rangka upaya mewujudkan ketertiban, keamanan, keadilan, dan kesejahteraan masyarakat.</string>
    <string name="copyright">Copyright © 2020 UBHARAJAYA. All rights reserved.</string>
    <string name="bio1">Nama</string>
    <string name="bio2">NPM</string>
    <string name="bio3">Kelas</string>
    <string name="bio4">Fakultas</string>
    <string name="bio5">Prodi</string>
    <string name="bio6">Angkatan</string>
    <string name="bio7">Semester</string>
    <string name="visiFkH">Visi FH Ubhara jaya adalah “Terwujudnya FH Ubhara Jaya Unggulan yang menghasilkan Lulusan Berwawasan Kebangsaan dan Berdaya Saing serta Menjunjung Tinggi Kepastian Hukum berdasarkan pada Keamanan Manusia (human security) di Tingkat Nasional pada tahun 2022.</string>
    <string name="misiFkH">Untuk mewujudkan visi di atas, maka misi yang akan dilakukan oleh FH Ubhara adalah:</string>
    <string name="misiFkH1">1. Menyelenggarakan pendidikan berkualitas yang terjadwal secara teratur, terencana dan efektif dalam rangka menghasilkan lulusan yang berkualitas, profesional dan berintegritas dengan berdasarkan keamanan manusia (human security);</string>
    <string name="misiFkH2">2. Menyelenggarakan dan meningkatkan kegiatan penelitian dan pengabdian dengan meningkatkan kerjasama dengan institusi terkait di dalam dan luar negeri;</string>
    <string name="misiFkH3">3. Menyelenggarakan dan meningkatkan kegiatan pengabdian kepada masyarakat dengan meningkatkan praktik penyuluhan hukum, konsultasi, dan bantuan hukum kepada masyarakat.</string>
    <string name="visiMagS2">Visi Prodi Magister Hukum adalah Menjadi Program Studi terdepan dalam menghasilkan Magister Hukum yang Profesional dalam Legal Security dan berwawasan kebangsaan dalam bidang Hukum pada tahun 2027</string>
    <string name="misiMagS2">Untuk mewujudkan visi di atas, maka misi yang akan dilakukan Prodi Magister Hukum adalah:</string>
    <string name="misiMagS2.1">1. Meningkatkan Kualitas dan Kuantitas Pelaksanaan Tridharma Perguruan Tinggi melalui pencapaian Pembelajaran.</string>
    <string name="misiMagS2.2">2. Melaksanakan Penelitian dan Pengabdian kepada masyarakat berwawasan kebangsaan dan berbasis sekuriti yang dilakukan oleh dosen dan mahasiswa.</string>
    <string name="misiMagS2.3">3. Meningkatkan efesiensi dan efektivitas manajemen ditingkat Prodi</string>
    <string name="tujuanMagS2">Berpijak pada visi dan misi di atas, tujuan yang ingin dicapai Prodi Magister Hukum dalam pelaksanaan Tri Dharma Perguruan Tinggi adalah:</string>
    <string name="tujuanMagS2.1">1. Menghasilkan Kelulusan Magister Hukum yang memiliki Kelulusan dan kedalaman Pengetahuaan, analisis, dan daya kritis sehingga dapat memahami perubahan hukum yang ada.</string>
    <string name="tujuanMagS2.2">2. Meningkatkan Lulusan Magister Hukum yang memiliki etika dan budaya dalam menjalankan profesinya.</string>
    <string name="visiTeknik">Visi Fakultas Teknik Ubhara Jaya adalah: ‘Pada tahun 2023 Fakultas Teknik Ubhara Jaya menjadi institusi pendidikan tinggi di bidang keteknikan yang berkualitas di Indonesia, berwawasan kebangsaan dan mampu berperan aktif dalam pembangunan bangsa melalui proses pendidikan, penelitian, dan pengabdian kepada masyarakat.’</string>
    <string name="misiTeknik1">1. Mewujudkan sistem tata kelola yang mengantar Fakultas Teknik mencapai arah pengembangan yang ditetapkan.</string>
    <string name="misiTeknik2">2. Menyelenggarakan proses pendidikan dengan tata kelola pendidikan yang melampaui ambang minimal yang ditetapkan untuk standar nasional dan menghasilkan lulusan yang siap terap serta mampu bersaing di dunia kerja.</string>
    <string name="misiTeknik3">3. Menyelenggarakan penelitian, pengembangan dan penyebarluasan ilmu pengetahuan dan teknologi, serta melakukan kegiatan pengabdian kepada masyarakat khususnya di bidang keteknikan dalam rangka meningkatkan taraf kehidupan masyarakat dan ikut mendukung pelaksanaan tugas Polri.</string>
    <string name="misiTeknik4">4. Mengembangkan kerja sama dan networking dengan pihak-pihak yang relevan dalam rangka perwujudan tridharma perguruan tinggi.</string>
    <string name="tujuanTeknik">Berpijak pada visi dan misi di atas, tujuan yang ingin dicapai Fakultas Teknik Ubhara Jaya adalah:</string>
    <string name="tujuanTeknik1">1. Terwujudnya sistem tata kelola yang efisien dimana tiga komponen tata kelola (kerangka peraturan, menajemen dan para pihak) bekerja sama secara sinergis untuk mencapai arah pengembangan fakultas dengan mengadopsi falsafah Ubhara Jaya sebagai institusi pelayanan publik.</string>
    <string name="tujuanTeknik3">3. Meningkatkan kuantitas dan kualitas penelitian dan pengabdian pada masyarakat untuk menunjang mutu pendidikan serta sumber daya manusia di Fakultas Teknik.</string>
    <string name="tujuanTeknik4">4. Terwujudnya networking pada level fakultas dan program studi sebagai institusi dengan institusi lain dan pada level anggota sivitas academika Fakultas Teknik dengan anggota sivitas academica institusi lain.</string>
    <string name="deskripsiFtIndustri">Program Studi Teknik Industri Bhayangkara adalah disiplin kerekayasaan yang berkaitan dengan perancangan, penginstalasian, perbaikan suatu sistem integral, yang terdiri dari manusia, peralatan/mesin, bahan, energi dan informasi. Jalur pilihan pada program studi ini adalah Sistem Manufaktur dan Manajemen Industri.</string>
    <string name="visiIndustri">Pada tahun 2030 Program Studi Teknik Industri Universitas Bhayangkara Jakarta Raya menjadi program studi unggulan di tinggkat Nasional, mempunyai jiwa berwawasan kebangsaan, tanggap terhadap perubahan ilmu dan teknologi dalam bidang Teknik Industri.</string>
    <string name="misiIndustri1">1. Melaksanakan pendidikan Teknik Industri yang berorientasi pada perkembangan ilmu pengetahuan dan teknologi, tanggap pada perkembangan kebutuhan pasar.</string>
    <string name="misiIndustri2">2. Membekali mahasiswa dengan pengetahuan sebagai insan peneliti berjiwa wirausaha dan mempunyai wawasan kebangsaan.</string>
    <string name="misiIndustri3">3. Menjalin kerjasama dengan pihak pengguna lulusan Teknik Industri baik pemerintah, swasta dan masyarakat dalam rangka peningkatan mutu hasil proses belajar mengajar dan implementasi ilmu bidang Teknik Industri.</string>
    <string name="tujuanIndustri1">1. Mengidentifikasi permasalahan melalui penguasaan pengetahuan dan pembentukan wawasan sistem integral yang dipelajari.</string>
    <string name="tujuanIndustri2">2. Memecahkan permasalahan sistem integral, melalui pembentukan keterampilan untuk merancang, menginstalasikan dan memperbaiki sistem integral tersebut.</string>
    <string name="tujuanIndustri3">3. Memiliki sikap untuk mencari cara terbaik dalamhal mengkaji, meneliti dan pemecahan masalah sistem integral, melalui penerapan metodologi, alat analisis dan prinsip-prinsip ekonomi.</string>
    <string name="tujuanIndustri4">4. Memiliki wawasan yang berakar pada penguasaan teknologi informasi, manajemen dan wirausaha yang mengarah pada terbentuknya jiwa inovatif serta sikap profesional dan mengabdikan ilmu untuk kepentingan masyarakat dan Negara.</string>
    <string name="deskripsiKimia">Program Studi Teknik Kimia sebagai salah satu program studi di Fakultas Teknik yang mempelajari perancangan dan pengaturan proses industri untuk merubah sifat kimia dan fisika suatu bahan baku menjadi produk yang diinginkan dengan mempertimbangkan efisiensi energi, faktor ekonomi, keamanan dan keselamatan kerja serta kualitas lingkungan.</string>
    <string name="visiKimia">Pada tahun 2022 menjadi Program Studi Teknik Kimia yang unggul di tingkat nasional, dibidang rekayasa dan teknologi bahan maju yang berwawasan kebangsaan dan berbasis sekuriti.</string>
    <string name="misiKimia1">1. Menyelenggarakan pendidikan untuk menghasilkan lulusan yang berkualitas , memiliki kompetensi tinggi, profesional dibidang rekayasa dan teknologi bahan dan mampu mengembangkan jejaring dengan industri.</string>
    <string name="misiKimia2">2. Menyelenggarakan penelitian di bidang rekayasa dan teknologi bahan serta bidang ilmu terkait lainya.</string>
    <string name="misiKimia3">3. Menyelenggarakan sistem pembinaan administrasi akademik dan pengawasan proses belajar mengajar pada Program Studi Teknik Kimia.</string>
    <string name="misiKimia4">4. Menyelenggarakan kerjasama dengan pihak pengguna alumni Teknik Kimia dalam rangka peningkatan mutu dan kompetensi lulusan Teknik Kimia.</string>
    <string name="misiKimia5">5. Menyelenggarakan kegiatan dengan melibatkan masyarakat sebagai bentuk aplikasi keilmuan Program Studi Teknik Kimia.</string>
    <string name="tujuanKimia1">1. Menghasilkan sarjana yang berkualitas, memiliki kompetensi tinggi, [rofesional dibidang rekayasa dan teknologi bahan maju dan mampu mengembangkan jejaring dengan industri.</string>
    <string name="tujuanKimia2">2. Menjadi pusat ilmu pengetahuan dan teknologi kimia guna mendorong pengembangan teknologi kimia terkini.</string>
    <string name="tujuanKimia3">3. Untuk menyiapkan lulusan yang mempunyai kemampuan dalam memberdayakan masyarakat melalui pengembangan konsep pemecahan masalah dengan menggunakan metode ilmiah sesuai dengan substansi dan ketrampilan.</string>
    <string name="misiLingkungan1">1. Menyelenggarakan pendidikan dibidang teknologi lingkungan dan sistem serta ilmu-ilmu penunjang pencapaian kompetensi lulusan Teknik Lingkungan.</string>
    <string name="misiLingkungan2">2. Mendorong terciptanya sarjana dan atau akademisi dengan pola pikir ilmiah yang mendukung peningkatan pengetahuan mahasiswa dan dosen serta staf jurusan Teknik Lingkungan.</string>
    <string name="misiLingkungan3">3. Menyelenggarakan penelitian di bidang proses dan perancangan pengelolaan lingkungan yang berkesinambungan  serta bidang ilmu terkait lainnya.</string>
    <string name="misiLingkungan4">4. Menyelenggarakan sistem pembinaan administrasi akademik dan pengawasan proses belajar mengajar pada jurusan Teknik Lingkungan.</string>
    <string name="misiLingkungan5">5. Menyelenggarakan Tri Dharma Perguruan Tinggi, pengajaran, penelitian dan pengabdian masyarakat, serta      melaksakan kerjasama dengan pihak pengguna alumni Teknik Lingkungan dalam rangka peningkatan mutu dan kompetensi lulusan Teknik Lingkungan.</string>
</resources>