<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prodi_fkt_kimia">

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prodi Teknik Kimia"
        android:textStyle="bold"/>

    <ImageView
        android:paddingTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgFkteknik"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ubj1"
        android:paddingBottom="10dp"/>

    <TextView
        android:paddingRight="30dp"
        android:textSize="14sp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgFkteknik"
        android:paddingLeft="30dp"
        android:id="@+id/txtDeskripis"
        android:text="@string/deskripsiKimia"/>

    <TextView
        android:id="@+id/txtVisi1"
        android:paddingLeft="10dp"
        android:layout_below="@id/txtDeskripis"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="Visi Prodi Teknik Kimia"/>

    <TextView
        android:paddingRight="30dp"
        android:textSize="14sp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVisi1"
        android:paddingLeft="30dp"
        android:id="@+id/txtVisi2"
        android:text="@string/visiKimia"/>

    <TextView
        android:id="@+id/txtMisi1"
        android:paddingLeft="10dp"
        android:layout_below="@id/txtVisi2"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="Misi Prodi Teknik Kimia"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi1"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi2"
        android:textSize="14sp"
        android:text="@string/misiKimia1"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi2"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi3"
        android:textSize="14sp"
        android:text="@string/misiKimia2"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi3"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi4"
        android:textSize="14sp"
        android:text="@string/misiKimia3"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi4"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi5"
        android:textSize="14sp"
        android:text="@string/misiKimia4"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi5"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi6"
        android:textSize="14sp"
        android:text="@string/misiKimia5"/>


    <TextView
        android:id="@+id/txtTujuan"
        android:paddingLeft="10dp"
        android:layout_below="@id/txtMisi6"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="Tujuan Prodi Teknik Kimia"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTujuan"
        android:paddingLeft="30dp"
        android:id="@+id/txtTujuan1"
        android:textSize="14sp"
        android:text="@string/tujuanKimia1"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTujuan1"
        android:paddingLeft="30dp"
        android:id="@+id/txtTujuan2"
        android:textSize="14sp"
        android:text="@string/tujuanKimia2"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTujuan2"
        android:paddingLeft="30dp"
        android:id="@+id/txtTujuan3"
        android:textSize="14sp"
        android:text="@string/tujuanKimia3"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTujuan3"
        android:paddingLeft="30dp"
        android:id="@+id/txtTujuan4"
        android:textSize="14sp"
        android:paddingBottom="10dp"
        android:text="@string/tujuanIndustri4"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTujuan4"
        android:layout_centerHorizontal="true"
        android:text="Kembali"/>

</RelativeLayout>