<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prodi_fkt_lingkungan">

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prodi Teknik Lingkungan"
        android:textStyle="bold"/>

    <ImageView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgFkteknik"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ubj1"
        android:paddingBottom="1dp"/>

    <TextView
        android:id="@+id/txtVisi1"
        android:paddingLeft="10dp"
        android:layout_below="@id/imgFkteknik"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="Visi Prodi Teknik Lingkungan"/>

    <TextView
        android:paddingRight="30dp"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVisi1"
        android:paddingLeft="30dp"
        android:id="@+id/txtVisi2"
        android:text="@string/visiKimia"/>

    <TextView
        android:id="@+id/txtMisi1"
        android:paddingLeft="10dp"
        android:layout_below="@id/txtVisi2"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="Misi Prodi Teknik Lingkungan"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi1"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi2"
        android:textSize="16sp"
        android:text="@string/misiLingkungan1"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi2"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi3"
        android:textSize="16sp"
        android:text="@string/misiLingkungan2"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi3"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi4"
        android:textSize="16sp"
        android:text="@string/misiLingkungan3"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi4"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi5"
        android:textSize="16sp"
        android:text="@string/misiLingkungan4"/>

    <TextView
        android:paddingRight="30dp"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMisi5"
        android:paddingLeft="30dp"
        android:id="@+id/txtMisi6"
        android:textSize="16sp"
        android:text="@string/misiLingkungan5"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMisi6"
        android:layout_centerHorizontal="true"
        android:text="Kembali"/>

</RelativeLayout>